fix Create task button

--- a/src/index.html
+++ b/src/index.html
@@ -21,10 +21,13 @@
         </header>
         <main>
             <nav class="left-bar">
-                <div class="add">
-                    <img alt="add" class="add-icon" id="add-icon" />
-                    <span>Create</span>
-                </div>
+                <a href="">
+                    <div class="create-box">
+                        <img alt="add" class="add-icon" id="add-icon" />
+                        <span>Create</span>
+                    </div>
+                </a>
+
                 <div class="category">
                     <div class="all-task">
                         <img
@@ -55,7 +58,7 @@
                             class="dropdown-arrow-icon"
                         />
                     </div>
-                    <ol class="lists">
+                    <ul class="category-list">
                         <li class="list">
                             <img
                                 src=""
@@ -74,7 +77,7 @@
                             />
                             <span>Note </span> <span>18 </span>
                         </li>
-                    </ol>
+                    </ul>
                 </nav>
                 <div class="create-new-list">
                     <img
@@ -85,38 +88,45 @@
                     <span>Create new list</span>
                 </div>
             </nav>
-            <div class="list">
-                <img
-                    src=""
-                    alt="Horizontal Rule"
-                    class="horizontal-rule-icon"
-                    id="horizontal-rule-icon"
-                />
-                <div class="list-head">
-                    <div class="list-name">My to do</div>
-                    <img src="" alt="more" class="more-icon" id="more-icon" />
-                </div>
-                <div class="list-add-to-do">
+            <div class="list-board">
+                <div class="list-container">
                     <img
                         src=""
-                        alt="add task"
-                        class="add-task-icon"
-                        id="add-task-icon"
+                        alt="Horizontal Rule"
+                        class="horizontal-rule-icon"
+                        id="horizontal-rule-icon"
                     />
-                    <span>Add to do</span>
-                </div>
-                <div class="list-body">
-                    Đã hoàn thành tất cả việc cần làm
-                    <div>Xuất sắc</div>
-                </div>
-                <div class="list-foot">
-                    <img
-                        src=""
-                        alt="Dropdown"
-                        class="dropdown-icon"
-                        id="dropdown-icon"
-                    />
-                    <span>Complete ( 122 ) </span>
+                    <div class="list-head">
+                        <div class="list-name">My to do</div>
+                        <img
+                            src=""
+                            alt="more"
+                            class="more-icon"
+                            id="more-icon"
+                        />
+                    </div>
+                    <div class="list-add-to-do">
+                        <img
+                            src=""
+                            alt="add task"
+                            class="add-task-icon"
+                            id="add-task-icon"
+                        />
+                        <span>Add to do</span>
+                    </div>
+                    <div class="list-body">
+                        Đã hoàn thành tất cả việc cần làm
+                        <div>Xuất sắc</div>
+                    </div>
+                    <div class="list-foot">
+                        <img
+                            src=""
+                            alt="Dropdown"
+                            class="dropdown-icon"
+                            id="dropdown-icon"
+                        />
+                        <span>Complete ( 122 ) </span>
+                    </div>
                 </div>
             </div>
         </main>
