refactor(index.html): change from todo to task and

--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Todos</title>
+        <title>Tasks</title>
     </head>
     <body>
         <header>
             <div class="left-side">
                 <img id="menu-icon" class="menu-icon" alt="Menu" />
                 <a href="#" class="return-homepage">
-                    <img id="task-icon" alt="Todos" class="logo-homepage" />
+                    <img id="task-icon" alt="task" class="logo-homepage" />
                     <h1>Tasks</h1></a
                 >
             </div>
@@ -21,22 +21,20 @@
         </header>
         <main>
             <nav class="left-bar">
-                <a href="">
-                    <div class="create-box">
-                        <img alt="add" class="add-icon" id="add-icon" />
-                        <span>Create</span>
-                    </div>
-                </a>
+                <div class="create-box">
+                    <img alt="add" class="add-icon" id="add-icon" />
+                    <span>Create</span>
+                </div>
 
                 <div class="category">
                     <div class="all-task">
                         <img
                             src=""
-                            alt="All to do"
-                            id="all-to-do-icon"
-                            class="all-to-do-icon"
+                            alt="All tasks"
+                            id="all-tasks-icon"
+                            class="all-tasks-icon"
                         />
-                        <span>All to do</span>
+                        <span>All tasks</span>
                     </div>
                     <div class="have-star">
                         <img
@@ -97,7 +95,7 @@
                         id="horizontal-rule-icon"
                     />
                     <div class="list-head">
-                        <div class="list-name">My to do</div>
+                        <div class="list-name">My task</div>
                         <img
                             src=""
                             alt="more"
@@ -105,14 +103,14 @@
                             id="more-icon"
                         />
                     </div>
-                    <div class="list-add-to-do">
+                    <div class="list-add-task">
                         <img
                             src=""
                             alt="add task"
                             class="add-task-icon"
                             id="add-task-icon"
                         />
-                        <span>Add to do</span>
+                        <span>Add task</span>
                     </div>
                     <div class="list-body">
                         Đã hoàn thành tất cả việc cần làm
