feat(animation of sidebar): create keyframs for collapsing sidebar

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
                     <span>Create new list</span>
                 </div>
             </nav>
-            <main class="main-board">
+            <main class="main-board" id="main-board">
                 <div class="card">
                     <img
                         src=""
